# omnilife_framework_automations

./: .gitignore  README.md  deploy-script-autocomplete  deploy-script-automated.sh  deploy-script.sh  pyproject.toml  workspace.toml
.github/workflows/: test_stable.yml
.hooks/: pre-commit
bases/omnilife_framework_automations/autofill_urgent_project_lambda/: __init__.py  lambda_function.py
bases/omnilife_framework_automations/plan_next_week_lambda/: __init__.py  lambda_function.py
components/omnilife_framework_automations/event/: __init__.py  entities.py  modules.py
components/omnilife_framework_automations/google/: __init__.py  repositories.py
components/omnilife_framework_automations/infrastructure/: __init__.py  repositories.py  services.py
components/omnilife_framework_automations/infrastructure/repositories/: event.py  parameter.py  project.py  task.py
components/omnilife_framework_automations/logger/: __init__.py  logger.py
components/omnilife_framework_automations/notion/: __init__.py  core.py  helpers.py
components/omnilife_framework_automations/parameter/: __init__.py  modules.py  repositories.py
components/omnilife_framework_automations/project/: __init__.py  automations.py  entities.py  modules.py  repositories.py  services.py  test_entities.py
components/omnilife_framework_automations/task/: __init__.py  entities.py  modules.py  repositories.py  services.py
development/: google_calendar.py  logger.py  notion.py  notion_project.py  notion_task.py  parameters.py
projects/autofill_urgent_project/: pyproject.toml
projects/autofill_urgent_project/terraform/: .terraform.lock.hcl  main.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup
projects/plan_next_week/: pyproject.toml
projects/plan_next_week/terraform/: main.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
test/bases/omnilife_framework_automations/autofill_urgent_project_lambda/: test_core.py
test/bases/omnilife_framework_automations/plan_week_lambda/: test_core.py
test/components/omnilife_framework_automations/event/: test_entities.py
test/components/omnilife_framework_automations/google/: test_repositories.py
test/components/omnilife_framework_automations/logger/: test_logger.py
test/components/omnilife_framework_automations/notion/: test_core.py  test_helpers.py
test/components/omnilife_framework_automations/parameter/: test_core.py
test/components/omnilife_framework_automations/project/: test_automations.py  test_core.py  test_services.py
test/components/omnilife_framework_automations/task/: test_entities.py
