[tool.poetry]
name = "omnilife-framework-automations"
version = "0.1.0"
description = ""
authors = ["Alexandre Osada <alexandre.osada.dev@gmail.com>"]
readme = "README.md"

packages = [
    { include = "omnilife_framework_automations/project", from = "./components" },
    { include = "omnilife_framework_automations/notion", from = "./components" },
    { include = "omnilife_framework_automations/autofill_urgent_project_lambda", from = "./bases" },
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.50"
requests = "^2.31.0"
pendulum = "^3.0.0"
requests-mock = "^1.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
