[tool.poetry]
name = "plan_next_week"
version = "0.1.0"
description = ""
authors = ["Alexandre Osada <alexandre.osada.dev@gmail.com>"]
license = ""

packages = [
    { include = "omnilife_framework_automations/plan_next_week_lambda", from = "../../bases" },
    { include = "omnilife_framework_automations/logger", from = "../../components" },
    { include = "omnilife_framework_automations/infrastructure", from = "../../components" },
    { include = "omnilife_framework_automations/task", from = "../../components" },
    { include = "omnilife_framework_automations/parameter", from = "../../components" },
    { include = "omnilife_framework_automations/event", from = "../../components" },
    { include = "omnilife_framework_automations/google", from = "../../components" },
    { include = "omnilife_framework_automations/notion", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pendulum = "^3.0.0"
injector = "^0.21.0"
google-auth = "^2.28.2"
google-api-python-client = "^2.122.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
